# fixed-math-taylor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  EXAMPLES.md  README.md  Readme.md  SECURITY.md
.cargo/: config.toml
src/: lib.rs  sin_table.rs.inc
