[package]
name = "fixed-math-taylor"
version = "0.3.1"
edition = "2021"
authors = ["Jorge Andre Castro <georgeandrec@gmail.com>"]
license = "GPL-2.0-or-later"
description = "High-performance fixed-point trigonometry library optimized for microcontrollers without FPU. 100% no_std."
repository = "https://github.com/jorgeandrecastro/fixed-math-taylor"
documentation = "https://docs.rs/fixed-math-taylor"
readme = "README.md"
keywords = ["fixed-point", "trigonometry", "sin", "cos", "embedded", "no_std", "RP2040"]
categories = ["embedded", "mathematics", "no-std"]

[features]
# Par défaut, on ne compile rien pour forcer un choix explicite ou rester minimal
default = []

# Choise 
taylor = []   # Active l'approximation par série de Taylor
lut = []      # Active la table de recherche (Look-Up Table)
fast-sin = [] # Active une version ultra-rapide (approximation quadratique)

# Support pour les types
f32 = []      # Optimisations spécifiques pour f32 (ex: RP2040)

[profile.release]
opt-level = "z"      # Taille minimale
lto = true           # Optimisation au lien
codegen-units = 1    
panic = "abort"      # Indispensable en no_std
strip = true         # Nettoyage des symboles